@@ -269,7 +269,7 @@ int	__zbx_DBexecute(const char *fmt, ...)
 	return rc;
 }
 
-int	DBis_null(char *field)
+int	DBis_null(const char *field)
 {
 	return zbx_db_is_null(field);
 }
