@@ -29,6 +29,7 @@ Changes for 1.9.0
 
 Changes for 1.8.4rc3
 
+ - [ZBX-2395] fixed sending of the same message to the same user using different media types (asaveljevs)
  - [ZBXNEXT-586] added sensor[device,sensor,<mode>] check for Linux 2.4 (asaveljevs)
  - [ZBXNEXT-586] added sensor[device,sensor,<mode>] check for OpenBSD; thanks to Robert Nagy (asaveljevs)
  - [ZBX-3252] fixed graph height calculations when graph height was less then 120px (KB)
